v5.11.0/python/_sources/paraview.simple.IOSSReader.rst.txt
paraview.simple.IOSSReader
==========================

.. currentmodule:: paraview.simple

.. autofunction:: IOSSReader

Data Descriptors
----------------


   
   ApplyDisplacements
       Geometric locations can include displacements. When this
       option is on, the nodal positions are 'displaced' by the standard
       exodus displacement vector. If displacements are turned 'off', the user
       can explicitly add them by applying a warp filter.
   
   AssemblySelectors
       Specify the selectors for the data assembly chosen using \*\*Assembly\*\*
       to choose the blocks to extract from the input dataset.
   
   DisplacementMagnitude
       When displacements are being applied, they are scaled by
       this amount. Set to 1 for no scaling.
   
   EdgeBlockFields
       Select the edge blocks fields / arrays to read.
   
   EdgeBlocks
       Select the edge blocks to read.
   
   EdgeSetFields
       Select the edge sets fields / arrays to read.
   
   EdgeSets
       Select the edge sets to read.
   
   ElementBlockFields
       Select the element blocks fields / arrays to read.
   
   ElementBlocks
       Select the element blocks to read.
   
   ElementSetFields
       Select the element sets fields / arrays to read.
   
   ElementSets
       Select the element sets to read.
   
   FaceBlockFields
       Select the face blocks fields / arrays to read.
   
   FaceBlocks
       Select the face blocks to read.
   
   FaceSetFields
       Select the face sets fields / arrays to read.
   
   FaceSets
       Select the face sets to read.
   
   FieldSuffixSeparator
       Set the character used to separate suffix from the field.
   
   FileName
       This property specifies the file name for the IOSS reader.
   
   FileRange
       To limit reading a subset of files in spatial file-series,
       specify a valid range. You may also use \*\*FileStride\*\* to step over
       files in this range.
   
   FileStride
       Specify the stride to use when reading a subset of files
       as dictated by the \*\*FileRange\*\*.
   
   GenerateFileId
       When checked, the reader will add a cell array called 'file_id'
       indicate which partitioned file the cell came from.
   
   GroupNumericVectorFieldComponents
       Set whether the reader should treat numeric suffices for a vector field as vector components
       of a vtkDataArray. By default, fields with numeric suffices are not grouped into a single vtkDataArray.
   
   NodeBlockFields
       Select the edge blocks fields / arrays to read.
   
   NodeSetFields
       Select the node sets fields / arrays to read.
   
   NodeSets
       Select the node sets to read.
   
   ReadGlobalFields
       When checked, the reader will read quality assurance and
       information records, if available.
   
   ReadIds
       When checked, the reader will read 'ids' and 'element_side'
       fields, if available.
   
   ReadQAAndInformationRecords
       When checked, the reader will read global fields, if available.
   
   RemoveUnusedPoints
       Node related data, including point coordinates, point field data etc. is
       typically shared between all blocks and sets. By default, the reader will
       remove unused points for each block or set. To avoid this, set this flag to
       false.
   
   ScanForRelatedFiles
       This reader can lookup additional related files using pattern matching
       based on the files provided. This is useful to lookup restarted results,
       for example. To avoid this behavior, uncheck this property.
   
   SideSetFields
       Select the side sets fields / arrays to read.
   
   SideSets
       Select the side sets to read.
   
   StructuredBlockFields
       Select the structured blocks fields / arrays to read.
   
   StructuredBlocks
       Select the structured blocks to read.
   
   TimestepValues
   
   

Data Descriptors inherited from Proxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


   
   __dict__
       dictionary for instance variables (if defined)
   
   __weakref__
       list of weak references to the object (if defined)
   

Methods
-------


   
   Initialize = aInitialize(self, connection=None, update=True)
   
   

Methods inherited from SourceProxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


   
   FileNameChanged(self)
       Called when the filename of a source proxy is changed.
   
   GetCellDataInformation(self)
       Returns the associated cell data information.
   
   GetDataInformation(self, idx=None)
       This method returns a DataInformation wrapper around a
       vtkPVDataInformation
   
   GetFieldDataInformation(self)
       Returns the associated cell data information.
   
   GetPointDataInformation(self)
       Returns the associated point data information.
   
   UpdatePipeline(self, time=None)
       This method updates the server-side VTK pipeline and the associated
       data information. Make sure to update a source to validate the output
       meta-data.
   
   UpdatePipelineInformation(self)
       This method updates the meta-data of the server-side VTK pipeline and
       the associated information properties
   
   __getitem__(self, idx)
       Given a slice, int or string, returns the corresponding
       output port
   
   

Methods inherited from Proxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


   
   GetProperty(self, name)
       Given a property name, returns the property object.
   
   GetPropertyValue(self, name)
       Returns a scalar for properties with 1 elements, the property
       itself for vectors.
   
   InitializeFromProxy(self, aProxy, update=True)
       Constructor. Assigns proxy to self.SMProxy, updates the server
       object as well as register the proxy in _pyproxies dictionary.
   
   ListProperties(self)
       Returns a list of all property names on this proxy.
   
   SetPropertyWithName(self, pname, arg)
       Generic method for setting the value of a property.
   
   __del__(self)
       Destructor. Cleans up all observers as well as remove
       the proxy from the _pyproxies dictionary
   
   __eq__(self, other)
       Returns true if the underlying SMProxies are the same.
   
   __getattr__(self, name)
       With the exception of a few overloaded methods,
       returns the SMProxy method
   
   __hash__(self)
       Return hash(self).
   
   __init__(self, \*\*args)
       Default constructor. It can be used to initialize properties
       by passing keyword arguments where the key is the name of the
       property. In addition registrationGroup and registrationName (optional)
       can be specified (as keyword arguments) to automatically register
       the proxy with the proxy manager.
   
   __iter__(self)
       Creates an iterator for the properties.
   
   __ne__(self, other)
       Returns false if the underlying SMProxies are the same.
   
   __setattr__(self, name, value)
       Implement setattr(self, name, value).
   
   add_attribute(self, name, value)
   
   



For the full list of servermanager proxies, please refer to :doc:`Available readers, sources, writers, filters and animation cues <paraview.servermanager_proxies>`